--- a/index.haml
+++ b/index.haml
@@ -105,6 +105,13 @@
       %hr
 
       .f
+        .flag.algeria
+          .a
+          .bb
+            .b
+        .name 阿尔及利亚
+
+      .f
         .flag.usa
           - 3.times do
             .l
